k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teflon
  labels:
    app: teflon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teflon
  template:
    metadata:
      labels:
        app: teflon
    spec:
      containers:
      - name: teflon
        image: stevemcquaid/falco-teflon:latest
        imagePullPolicy: Always
        args:
          - "cat /secret/foo && sleep 1000000"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: foo
          mountPath: "/secret/"
          readOnly: true
      volumes:
      - name: foo
        secret:
          secretName: mysecret
