k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: teflon
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: teflon
