k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: teflon
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: reflon.rbaz.com
    http:
      paths:
      - backend:
          serviceName: teflon
          servicePort: http
        path: /
